Feature/dpo 2824 job logging (#156)
* DPO-2824 Korjataan kauan kestävät eräajot
- Divide forecast sections update to own services so transactions will not wait for data to fetched from http api
- removed unused code
- logging fixes and limits
- code quality fixes